scrollbar fixed

--- a/src/app/about/about.css
+++ b/src/app/about/about.css
@@ -1,6 +1,6 @@
 .about-hero {
   position: relative;
-  width: 100vw;
+  width: 100%;
   height: 125svh;
   overflow: hidden;
   background-color: var(--bg);
@@ -42,7 +42,7 @@
 
 .about-copy {
   position: relative;
-  width: 100vw;
+  width: 100%;
   padding: 8em 0;
 }
 
@@ -83,7 +83,7 @@
 
 section.expertise {
   position: relative;
-  width: 100vw;
+  width: 100%;
   height: 100%;
   min-height: 100svh;
 }
@@ -93,7 +93,7 @@ section.expertise {
   padding-top: 4em;
   top: 0;
   left: 0;
-  width: 100vw;
+  width: 100%;
   height: 100svh;
   overflow: hidden;
   will-change: transform;
@@ -148,7 +148,7 @@ section.expertise {
 
 .about-outro-banner {
   position: relative;
-  width: 100vw;
+  width: 100%;
   height: 75vh;
   overflow: hidden;
   margin: 8em 0 0 0;
@@ -163,7 +163,7 @@ section.expertise {
 
 .founder-voice {
   position: relative;
-  width: 100vw;
+  width: 100%;
   padding: 8em 0;
 }
 
@@ -248,7 +248,7 @@ section.expertise {
   .about-tagline {
     position: relative;
     top: 0rem;
-    width: 100vw;
+    width: 100%;
     flex-direction: column;
     gap: 1em;
   }
