--- a/src/app/components/Nav/Nav.css
+++ b/src/app/components/Nav/Nav.css
@@ -2,7 +2,7 @@ nav {
   position: fixed;
   top: 0;
   left: 0;
-  width: 100vw;
+  width: 100%;
   padding: 20px;
   display: flex;
   justify-content: space-between;
@@ -39,7 +39,7 @@ nav p,
   position: fixed;
   top: 0;
   left: 0;
-  width: 100vw;
+  width: 100%;
   height: 100svh;
   display: flex;
   justify-content: center;
@@ -55,7 +55,7 @@ nav p,
   position: fixed;
   top: 0;
   left: 0;
-  width: 100vw;
+  width: 100%;
   padding: 20px;
   display: flex;
   justify-content: space-between;
@@ -66,7 +66,7 @@ nav p,
   position: fixed;
   bottom: 0;
   left: 0;
-  width: 100vw;
+  width: 100%;
   padding: 20px;
   display: flex;
   justify-content: space-between;
