--- a/src/app/contact/contact.css
+++ b/src/app/contact/contact.css
@@ -1,6 +1,6 @@
 .contact-hero {
   position: relative;
-  width: 100vw;
+  width: 100%;
   height: 90svh;
   overflow: hidden;
   background-color: var(--bg);
@@ -47,7 +47,7 @@
 
 .contact-banner {
   position: relative;
-  width: 100vw;
+  width: 100%;
   height: 100svh;
   overflow: hidden;
   display: flex;
