--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -63,6 +63,7 @@ body {
   font-family: "am";
   background-color: #000;
   color: var(--copy);
+  overflow-x: hidden;
 }
 
 .page {
