--- a/src/app/project/project.css
+++ b/src/app/project/project.css
@@ -1,6 +1,6 @@
 .project-hero {
   position: relative;
-  width: 100vw;
+  width: 100%;
   height: 100svh;
   overflow: hidden;
   display: flex;
@@ -99,7 +99,7 @@
 
 .project-preview-img {
   position: relative;
-  width: 100vw;
+  width: 100%;
   height: 100svh;
   overflow: hidden;
 }
