--- a/src/app/work/work.css
+++ b/src/app/work/work.css
@@ -1,6 +1,6 @@
 .work-hero {
   position: relative;
-  width: 100vw;
+  width: 100%;
   height: 100svh;
   overflow: hidden;
   background-color: var(--bg);
@@ -34,7 +34,7 @@
 
 .project {
   position: relative;
-  width: 100vw;
+  width: 100%;
   height: 100svh;
   overflow: hidden;
 }
